projet/parser_1.py
import ply.yacc as yacc
import AST
from lex5 import tokens

vars = {}

precedence = (
    ('left', 'OP'),
    ('left', 'ID'),
    ('left', 'VAUT')
)

operators = {
    "additionne" : lambda x,y: x+y,
    "soustrait" : lambda x,y: x-y
}

def p_program_sentence(p):
    'program : sentence'
    p[0] = p[1]

def p_program_recursive(p):
    'program : program sentence'
    p[0] = p[2]

def p_sentence_subordinate(p):
    'sentence : subordinate "."'
    p[0] = p[1]

def p_sentence_recursive(p):
    'sentence : subordinate PUIS sentence'
    p[0] = p[3]

def p_print(p):
    'print : AFFICHER expression'
    print(p[2])
    p[0] = p[2]

def p_subordinate_assign(p):
    '''subordinate : assign
        | print'''
    p[0] = p[1]

def p_assign(p):
    'assign : ID VAUT expression'
    vars[p[1]] = p[3]
    p[0] = p[3]

def p_expression_num(p):
    '''expression : NUMBER'''
    p[0] = p[1]

def p_expression_id(p):
    'expression : ID'
    p[0] = vars[p[1]]

def p_operator(p):
    '''operator : ADDITIONNE DE %prec OP
        | SOUSTRAIT DE %prec OP'''
    p[0] = operators[p[1]]
    
def p_expression_op(p):
    'expression : expression operator expression %prec OP'
    p[0] = p[2](p[1], p[3])

def p_error(p):
    print("Syntax error in line %d" % p.lineno)
    yacc.errok()

yacc.yacc(outputdir="generated")

if __name__ == "__main__":
    import sys
    prog = open(sys.argv[1] ).read()
    result = yacc.parse(prog)
